# qr-score

./: .gitignore  Cargo.toml  README.md  qr-score.toml
.github/workflows/: release.yml
src/: decoder.rs  error.rs  lib.rs  main.rs  render.rs  scorer.rs  types.rs
